@@ -873,6 +873,5 @@ Row7Y=340
 InputOptions=
 MachineOptions=
 GraphicOptions=
+GameplayOptions=
 AppearanceOptions=
-
-
